:bug: Fix z-index of workspace context menu

--- a/frontend/resources/styles/common/refactor/basic-rules.scss
+++ b/frontend/resources/styles/common/refactor/basic-rules.scss
@@ -905,7 +905,7 @@
   margin: 0;
   margin-top: $s-1;
   border-radius: $br-8;
-  z-index: $z-index-3;
+  z-index: $z-index-4;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: var(--menu-background-color);
