--- a/frontend/resources/styles/main/partials/context-menu.scss
+++ b/frontend/resources/styles/main/partials/context-menu.scss
@@ -8,7 +8,7 @@
   position: relative;
   visibility: hidden;
   opacity: 0;
-  z-index: 100;
+  z-index: 3;
 }
 
 .context-menu.is-open {
