--- a/frontend/resources/styles/main/partials/dropdown.scss
+++ b/frontend/resources/styles/main/partials/dropdown.scss
@@ -4,7 +4,7 @@
   background-color: $color-white;
   border-radius: $br2;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
-  z-index: 12;
+  z-index: 3;
 
   hr {
     margin: 0 !important;
