--- a/frontend/src/app/main/ui/components/context_menu_a11y.scss
+++ b/frontend/src/app/main/ui/components/context_menu_a11y.scss
@@ -10,7 +10,7 @@
   position: relative;
   visibility: hidden;
   opacity: $op-0;
-  z-index: $z-index-3;
+  z-index: $z-index-4;
 
   &.is-open {
     position: relative;
