--- a/frontend/src/app/main/ui/workspace/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/context_menu.scss
@@ -19,7 +19,7 @@
   border-radius: $br-8;
   border: $s-2 solid var(--panel-border-color);
   background-color: var(--menu-background-color);
-  z-index: $z-index-3;
+  z-index: $z-index-4;
 }
 
 .separator {
