--- a/frontend/src/app/main/ui/workspace/presence.scss
+++ b/frontend/src/app/main/ui/workspace/presence.scss
@@ -42,7 +42,7 @@
   padding: $s-8;
   margin: calc(-1 * $s-2) calc(-1 * $s-4) 0 0;
   background-color: var(--menu-background-color);
-  z-index: $z-index-3;
+  z-index: $z-index-4;
   .active-users-list {
     gap: $s-4;
     .users-num,
