--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/typography.scss
@@ -351,7 +351,7 @@
   right: 0;
   height: 100%;
   width: 100%;
-  z-index: $z-index-3;
+  z-index: $z-index-4;
 }
 
 .show-recent {
