--- a/frontend/src/app/main/ui/workspace/top_toolbar.scss
+++ b/frontend/src/app/main/ui/workspace/top_toolbar.scss
@@ -17,7 +17,7 @@
   padding: $s-8 $s-16;
   border-radius: $s-8;
   border: $s-2 solid var(--panel-border-color);
-  z-index: $z-index-10;
+  z-index: $z-index-3;
   background-color: var(--color-background-primary);
   transition:
     top 0.3s,
